assets/index.scss
@import "functions";
@import "variables";

body {
  z-index: -2;

  font-family: 'Open Sans', 'source-han-sans-traditional', 'Source Sans Pro', 'Noto Sans', 'Microsoft JhengHei', Arial, sans-serif;

  .md-button {
    text-transform: none;
  }
}

h1 {
  letter-spacing: -0.4px;

  color: $like-dark-brown-1;

  font-size: 42px;
  font-weight: 300;
  line-height: 1.21;
}

h2 {
  color: $like-dark-brown-1;

  font-size: 24px;
  font-weight: bold;
  line-height: 1.38;
}

* {
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
  -webkit-padding-start: 0;
}

img {
  user-select: none;

  -webkit-user-drag: none;
  user-drag: none;
  object-fit: contain;
}

html, body {
  width: 100%;
  height: 100%;

  background-color: $like-white !important;
}

.fixed-footer {
  &:not(.md-dialog) {
    padding-bottom: 60px;
  }

  footer {
    position: fixed;
    z-index: 4;
    bottom: 0;
  }
}

a,
.md-theme-default a:not(.md-button) {
  cursor: pointer;
  transition: opacity, color .2s ease-in-out;

  color: $like-green;

  &:hover {
    color: darken($like-green, 10);
  }
}

/* Layout System - Begin */
.lc-page-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between;

  min-height: 100%;

  .lc-page-content {
    flex: 1;
  }

  .lc-page-footer {
    margin-top: 60px;
    padding: 0;
  }
}


.lc-container-0,
.lc-container-1,
[class^="lc-container-2"],
[class*=" lc-container-2"],
.lc-container-3,
.lc-container-4 {
  position: relative;

  height: 100%;

  .underlay {
    position: absolute;
    z-index: 0;
    top: 0;
    left: 0;

    width: 66.66%;
    height: 100%;

    pointer-events: none;

    background-color: $like-gray-1;

    &.gradient {
      background-image: linear-gradient(271deg, $like-light-blue, $like-gradient-1);
    }

    @media (max-width: 600px) {
      width: 100%;
    }
  }
}

.lc-container-0 {

  /* TODO: Need refactoring */
  > img {
    width: 100%;
    height: 488px;

    object-fit: cover;
  }
}

.lc-container-1 {
  max-width: 1440px;
  margin: auto;

  .lc-narrow & {
    max-width: 704px;
  }

  &.lc-section-block + &.lc-section-block {
    margin-top: 32px;
  }

  .lc-narrow & {
    max-width: 704px;
  }

  &.lc-section-block + &.lc-section-block {
    margin-top: 32px;
  }
}

[class^="lc-container-2"],
[class*=" lc-container-2"] {
  padding-right: 64px;
  padding-left: 64px;

  @media (max-width: 768px) {
    padding-right: 24px;
    padding-left: 24px;
  }

  @media (max-width: 600px) {
    padding-right: 0;
    padding-left: 0;
  }

  &[class*="-extend"] {
    padding-right: 0;
    padding-left: 0;
  }
}

.lc-container-3 {
  padding-right: 40px;
  padding-left: 40px;

  @media (max-width: 960px) {
    padding-right: 24px;
    padding-left: 24px;
  }

  /* NOTE: Deprecated */
  .section-content,
  .section-title {
    margin: 0 8px;
  }
}

.lc-container-4 {
  width: 100%;
  padding-right: 8px;
  padding-left: 8px;
}

.lc-container-header {
  position: relative;

  .lc-container-2,
  .lc-container-3,
  .lc-container-4 {
    @media (max-width: 600px) {
      padding-right: 0;
      padding-left: 0;
    }
  }

  .lc-container-header-overlay {
    position: absolute;
    top: 50%;
    right: 0;
    bottom: 0;
    left: 0;
  }

  .lc-container-header-title {
    position: relative;

    margin: 0 64px 0;
    padding: 2px 8px;

    text-align: center;

    color: #462405;
    background-color: #d2f0f0;

    @media (min-width: 768px + 1px) {
      .lc-page-wrapper:not(.lc-narrow) & {
        margin-left: 0;
        margin-right: 1 / 3 * 100%;
      }
    }

    @media (max-width: 600px) {
      margin-left: 0;
      margin-right: 0;
    }

    > * {
      font-weight: 300;
    }
  }
}

/* Deprecated. Please use `.lc-padding-vertical-*` */
@for $i from 1 through 5 {
  .lc-verticle-inset-#{$i} {
    padding-top: pow(2, $i) * 1px;
    padding-bottom: pow(2, $i) * 1px;
  }
}

$spacing-list: 0 4 8 12 16 24 32 48 64;

@each $i in $spacing-list {
  .lc-margin-vertical-#{$i},
  .lc-margin-top-#{$i} {
    margin-top: $i * 1px;

    @if $i > 12 {
      &.lc-mobile {
        @media (max-width: 600px) {
          margin-top: $i / 2 * 1px + 4px;
        }
      }
    }
  }

  .lc-margin-vertical-#{$i},
  .lc-margin-bottom-#{$i} {
    margin-bottom: $i * 1px;

    @if $i > 12 {
      &.lc-mobile {
        @media (max-width: 600px) {
          margin-bottom: $i / 2 * 1px + 4px;
        }
      }
    }
  }

  .lc-padding-vertical-#{$i},
  .lc-padding-top-#{$i} {
    padding-top: $i * 1px;

    @if $i > 12 {
      &.lc-mobile {
        @media (max-width: 600px) {
          padding-top: $i / 2 * 1px + 4px;
        }
      }
    }
  }

  .lc-padding-vertical-#{$i},
  .lc-padding-bottom-#{$i} {
    padding-bottom: $i * 1px;

    @if $i > 12 {
      &.lc-mobile {
        @media (max-width: 600px) {
          padding-bottom: $i / 2 * 1px + 4px;
        }
      }
    }
  }
}

.lc-margin-vertical-0-mobile,
.lc-margin-top-0-mobile {
  @media (max-width: 600px) {
    margin-top: 0;
  }
}

.lc-margin-vertical-0-mobile,
.lc-margin-bottom-0-mobile {
  @media (max-width: 600px) {
    margin-bottom: 0;
  }
}

.lc-padding-vertical-0-mobile,
.lc-padding-top-0-mobile {
  @media (max-width: 600px) {
    padding-top: 0;
  }
}

.lc-padding-vertical-0-mobile,
.lc-padding-bottom-0-mobile {
  @media (max-width: 600px) {
    padding-bottom: 0;
  }
}

$font-size-list: 10 12 14 16 18 20 24 32 38 42 46 56;

@each $i in $font-size-list {
  .lc-font-size-#{$i} {
    font-size: $i * 1px;
    line-height: 1.35;

    @if $i > 24 {
      &.lc-mobile {
        @media (max-width: 600px) {
          font-size: ($i - 4) * 1px;
        }
      }
    }
  }
}

$font-weight-list: 300 400 600;

@each $i in $font-weight-list {
  .lc-font-weight-#{$i} {
    font-weight: $i;
  }
}

.lc-text-align- {
  &left {
    text-align: left;
  }
  &center {
    text-align: center;
  }
  &right {
    text-align: right;
  }
}

.lc-underline {
  text-decoration: underline;
}

.lc-color- {
  &like-green {
    color: $like-green !important;
  }
  &like-light-blue {
    color: $like-light-blue !important;
  }
  &like-gray-4 {
    color: $like-gray-4 !important;
  }
}

.lc-bg- {
  &transparent {
    background-color: transparent;
  }
  &light-blue {
    background-color: $like-light-blue;
  }
  &gray-1 {
    background-color: $like-gray-1;

    &-tablet-pc {
      @media (min-width: 600px + 1px) {
        background-color: $like-gray-1;
      }
    }
  }
}


.lc-container-3-extend-bg {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;

  border-radius: 8px;
  background-image: linear-gradient(223deg, #d2f0f0, #f0e6b4);

  & + .lc-container-3 {
    background-color: transparent !important;
  }

  @media (max-width: 704px) {
    border-radius: 0;
  }
}

.vue-lb-container {
  z-index: 9999 !important;
}

@media (min-width: 768px + 1px) {
  .lc-tablet-show {
    display: none !important;
  }
}

@media (max-width: 768px) {
  .lc-tablet-hide {
    display: none !important;
  }
}

@media (min-width: 601px) {
  .lc-tablet-pc-hide,
  .lc-mobile-show {
    display: none !important;
  }
}

@media (max-width: 600px) {
  body .block-section {
    font-size: 18px;

    .section-title {
      left: -32px;

      width: calc(100% + 48px);
    }
  }

  .lc-mobile-hide {
    display: none !important;
  }
}

.disabled:active,
.disabled:hover,
.disabled {
  cursor: not-allowed !important;
  pointer-events: none !important;

  opacity: .3 !important;
}

/* Layout System - End */

.md-field:not(.md-has-value) input.md-input {
  font-size: 16px;
}

